<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/tv_input"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/light_grey"
        android:textSize="48sp"
        android:padding="10dp"
        android:gravity="bottom|right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

       <Button
           android:id="@+id/btnSeven"
           android:layout_width="0dp"
           android:layout_margin="2dp"
           android:layout_height="match_parent"
           android:onClick="onDigit"
           android:layout_weight="1"
           android:text="@string/_7"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Divide"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_4"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"/>
        <Button
            android:id="@+id/btnSub"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Subtract"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_1"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Add"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDot"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/precision"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"/>
        <Button
            android:id="@+id/btnClear"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onClear"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"/>
        <Button
            android:id="@+id/btnMul"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mul"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eql"/>


    </LinearLayout>

</LinearLayout>